--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,68 @@
-﻿<Window x:Class="Prog122_Assign1_Milender.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prog122_Assign1_Milender"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="Prog122_Assign1_Milender.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Prog122_Assign1_Milender"
+    mc:Ignorable="d"
+    Title="MainWindow"
+    Height="450"
+    Width="800">
     <Grid>
+        <Label
+            Content="Enter Number 1"
+            HorizontalAlignment="Left"
+            Margin="54,88,0,0"
+            VerticalAlignment="Top"
+            RenderTransformOrigin="-0.081,0.533" />
+        <Label
+            Content="Enter Number 2"
+            HorizontalAlignment="Left"
+            Margin="54,233,0,0"
+            VerticalAlignment="Top" />
+        <TextBox
+            x:Name="txtNumber1"
+            HorizontalAlignment="Left"
+            Margin="54,114,0,0"
+            TextWrapping="Wrap"
+            VerticalAlignment="Top"
+            Width="120" />
+        <TextBox
+            x:Name="txtNumber2"
+            HorizontalAlignment="Left"
+            Margin="54,264,0,0"
+            TextWrapping="Wrap"
+            VerticalAlignment="Top"
+            Width="120" />
+        <Button
+            x:Name="btnAdd"
+            Content="Add"
+            HorizontalAlignment="Left"
+            Margin="54,182,0,0"
+            VerticalAlignment="Top"
+            Padding="5" />
+        <Button
+            x:Name="btnSubtract"
+            Content="Subtract"
+            HorizontalAlignment="Left"
+            Margin="101,182,0,0"
+            VerticalAlignment="Top" 
+            Padding="5"/>
+        <Button
+            x:Name="btnMultiply"
+            Content="Multiply"
+            HorizontalAlignment="Left"
+            Margin="185,182,0,0"
+            VerticalAlignment="Top"
+            Padding="5"/>
+        <Button
+            x:Name="btnDivide"
+            Content="Divide"
+            HorizontalAlignment="Left"
+            Margin="275,182,0,0"
+            VerticalAlignment="Top" 
+            Padding="5"/>
 
     </Grid>
 </Window>
